css/header-footer.css
/*CSS document*/


/*********HEADER STYLES**********/

/*Style for all screens*/


.topnav {
  background-color: #fff;
  overflow: hidden;
}

/* Style the links inside the navigation bar */
.topnav a {
    float: right;
  display: block;
  color: #000;
  text-align: center;
  padding: 14px 20px;
  text-decoration: none;
	text-transform: uppercase;
	letter-spacing: .05em;
  font-size: 13px;
	font-weight: 600;
}

.topnav span.extra-margin-left {
	padding-left:20px;
}

/* Add an active class to highlight the current page */
.active {
    background-color: transparent;
  border: solid black 1px;
}

/* Hide the link that should open and close the topnav on small screens */
.topnav .icon {
  display: none;
}

/* Dropdown container - needed to position the dropdown content */
.dropdown {
  float: right;
  overflow: hidden;
}

/* Style the dropdown button to fit inside the topnav */
.dropdown .dropbtn {
  border: none;
  outline: none;
  padding: 14px 16px;
  background-color: inherit;
  font-family: inherit;
  margin: 0;
  display: block;
  color: #000;
  text-align: center;
	text-transform: uppercase;
	letter-spacing: .05em;
  font-size: 13px;
	font-weight: 600;
}

/* Style the dropdown content (hidden by default) */
.dropdown-content {
  display: none;
  position: absolute;
  background-color: #f9f9f9;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
}

/* Style the links inside the dropdown */
.dropdown-content a {
	text-transform: capitalize;
  float: none;
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
  text-align: left;
}



	
	
	/**********************DESKTOP/TABLET ONLY HEADER STYLES********************/
@media screen and (min-width: 901px) {

		nav#mobileNav {
		display:none;
	} 
	
div#aboveNavLinks {
align-items: center;
	display: flex;
	height:30px;
    background-color: #97d2da;
	position:relative;
	width:100%;
		justify-content: flex-end;
}
	
		
	div#aboveNavLinks li {
  display: inline-flex;
		float:right;
  text-align: center;
  padding: 14px 20px;
  text-decoration: none;
	text-transform: capitalize;
	letter-spacing: .05em;
  font-size: 13px;
	font-weight: 600;
}
	div#aboveNavLinks li a {
	  color: #fff;
	}
	
	div#aboveNavLinks .social-icon {
		color:#fff;
	margin-left: 20px;
	position:absolute;
		left:0;
	}
	div#aboveNavLinks .social-icon:nth-child(2) {
		left:60px;
	}
	
	
.topnav {
	justify-content: flex-end;
align-items: center;
	display: flex;
	height:80px;
}
	
#header-logo {
	padding:50px 20px;
position: absolute;
    left: 0;
	top:0;
}
		a.nav-link.active:hover {
	  color: black;
			cursor:default;
}
	.pet-division-logo-desktop {
	  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
  filter: grayscale(100%);
	}
	.pet-division-logo-desktop:hover {
	  -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
  filter: grayscale(0%);
	}
		.pet-division-logo-mobile {
		display:none;
	}

/* Add a dark background on topnav links and the dropdown button on hover */
.topnav a:hover, .dropdown:hover .dropbtn {
  color: #649fa7;
}

    
/* Add a grey background to dropdown links on hover */
.dropdown-content a:hover {
  background-color: #97d2da;
  color: black;
}

/* Show the dropdown menu when the user moves the mouse over the dropdown button */
.dropdown:hover .dropdown-content {
  display: block;
}
}

	/**********************MOBILE/TABLET ONLY HEADER STYLES********************/
@media screen and (max-width: 900px) {
	nav#desktopNav {
		display:none;
	} 


	
	
	
	
	
	
}







/**********END HEADER STYLES**********/



/**********FOOTER STYLES**********/

#footer .social-icon {
	padding-right:15px;
	font-size: 18px;
}

#footer-logo {
	margin-bottom:10px;
}
.footer-wrapper {
	background-color:#0F0F10;
}

.footer-column {
	color:white;
}

.footer-column li {
	text-transform:uppercase;
	letter-spacing: .1em;
	font-size:12px;
}
.footer-column h5 {
	text-transform: uppercase;
	font-weight:600;
	letter-spacing:.1em;
	font-size:15px;
}
.footer-column a {
	color:white;
}
.footer-column a:hover {
	color:#97d2da;
}

/**********************DESKTOP ONLY FOOTER STYLES********************/
@media screen and (min-width: 728px) {
	.footer-wrapper {
  padding:7% 11%;
	display:flex;
}
	.footer-column {
	width: 25%;
	}
}




/**********************MOBILE ONLY FOOTER STYLES********************/
@media screen and (max-width: 728px) {

.footer-wrapper {
	display:block;
	}
	
	.footer-column {	
/*display:block;*/
	width:100%;
		padding-top:30px;
	}
	
	.footer-wrapper {
		padding:15px 25px 35px;
}
}




@media screen and (max-width: 900px) {

	
	.mobile-header-spacer {
		height:90px;
	}
	
/*****mobile test styles*****/
	
	.lock-scroll {
    overflow: hidden;
}
	
	
/*main top bar*/
	.top-bar {
		position:fixed;
		width:100vw;
		background-color:#131313;
height:70px;
	}
	
	#mobileDIV {
		max-height:100vh;
		position:fixed;
		top:70px;
			overflow-y: scroll;
				z-index: 3000;
		  -webkit-overflow-scrolling:touch; /* mobile safari */
	}
	#mobileDIV button {
		font-size:16px;
	}

/*main top accordian panel within the main top bar*/ 
		.top.mobile-nav-accordion {
		height:50px;
	}
	
.mobile-nav-accordion, 	/*panel that expands but doesn't link*/ .mobile-nav-link /*panel that links but doesn't expand*/ {
/*			position:fixed;*/
			height:50px;
/*		z-index: 1000;*/
background-color: #eee;
  color: #444;
	text-transform: uppercase;
	letter-spacing:.05em;
  cursor: pointer;
  padding: 14px 18px;
  width: 100vw;
  text-align: left;
  border: none;
  outline: none;
  transition: 0.4s;
}
	
	/*TRYING TO MAKE PAGE UNDERNEATH NOT SCROLL*/
	.mobile-nav-accordion:active body {
	overflow:hidden;
	}
	
/*panel that is hidden until clicking the mobile-nav-accordian*/	
.mobile-nav-panel {
/*  padding: 0 18px;*/
  background-color: white;
  display: none;
/*			max-height:100vh;*/
/*	z-index:2000;*/
}
	
	/*inner panel buttons*/
	button.mobile-nav-link.inner {
    height: 45px;
    padding: 10px 10px 10px 50px!important;
    text-transform: capitalize;
    background-color: #fff;
	}

	button.mobile-nav-link.inner:hover {
		background-color:#BBBBBB;
	}

	
/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
.mobile-a.active, .mobile-nav-link:active,  .mobile-nav-link:hover, .mobile-nav-accordion:hover {
  background-color: #ccc;
}
	
	 button.mobile-nav-accordion.active {
		background-color:#1F1F1F;
		 color:white;
	}
/*
	.mid.mobile-nav-panel {
		position:relative;
	}
*/

	
	

	/*icons and logo*/
	
	#header-logo-mobile {
position:fixed;
		left:14px;
		top:10px;
		height:50px;
	}
	span.hamburger-icon, .cart-icon, .login-icon {
		position:absolute;
  font-size: 28px;
	text-align: right;
  color: #fff;
		padding:14px 20px 14px 14px;
		cursor:pointer;
	}
	span.hamburger-icon {
			right:0;
		top:5px;
	}
		.cart-icon {
		right:100px;
		top:10px;
  font-size: 20px;
	}
			.login-icon {
						right:55px;
		top:10px;
  font-size: 20px;

	}

.active:after {
  content: "\2796"; /* Unicode character for "minus" sign (-) */
	color:white!important;
}
	
	.mobile-nav-accordion:after {
  content: '\02795'; /* Unicode character for "plus" sign (+) */
  font-size: 13px;
  color: #9D9D9D;
  float: right;
margin-right:10px;
  margin-left: 5px;
}

.active:after {
  content: "\2796"; /* Unicode character for "minus" sign (-) */
}
	
}

